End of Day 12 Apr 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/views/LearningGroups/learningGroupsCollection.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/LearningGroups/learningGroupsCollection.html.twig
@@ -1,10 +1,10 @@
 {% trans_default_domain "BusybeeTimeTableBundle" %}
 
-{% block tt_line_label %}{% endblock %}
-{% block tt_line_errors %}{% endblock %}
+{% block tt_line__learninggroups_label %}{% endblock %}
+{% block tt_line__learninggroups_errors %}{% endblock %}
 
-{% block tt_line_widget %}
-    {% set panelStyle = 'default' %}
+{% block tt_line__learninggroups_widget %}
+    {% set panelStyle = 'warning' %}
     {% set transDomain = 'BusybeeTimeTableBundle' %}
     {% set header = 'timetable.line.header' %}
 
@@ -27,4 +27,4 @@
         </div>
     </div>
     {% include '@BusybeeHome/Page/panelEnd.html.twig' %}
-{% endblock tt_line_widget %}
+{% endblock tt_line__learninggroups_widget %}
