--- a/src/Busybee/InstituteBundle/Resources/views/Department/staffCollection.js.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Department/staffCollection.js.html.twig
@@ -5,8 +5,8 @@
         name_prefix: '{{ form.staff.vars.full_name }}',
         allow_up: false,
         allow_down: false,
-        add: '<button title="{{ 'family.student.add'|trans }}" type="button" class="halflings halflings-plus-sign btn btn-primary" style="float: right;"></button>',
-        remove: '<button title="{{ 'family.student.remove'|trans }}" type="button" class="halflings halflings-erase btn btn-warning" style="float: right;"></button>',
+        add: '<button title="{{ 'department.staff.add'|trans }}" type="button" class="halflings halflings-plus-sign btn btn-primary" style="float: right;"></button>',
+        remove: '<button title="{{ 'department.staff.remove'|trans }}" type="button" class="halflings halflings-erase btn btn-warning" style="float: right;"></button>',
         add_at_the_end: true
     });
 </script>
