--- a/src/Busybee/TimeTableBundle/Resources/views/TimeTable/edit.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/TimeTable/edit.html.twig
@@ -6,8 +6,8 @@
 
 {% form_theme form 'BusybeeFormBundle:Template:bootstrap.html.twig'
 '@BusybeeForm/Template/jquery.collection.html.twig'
-'BusybeeTimeTableBundle:Lines:lineCollection.html.twig'
-'BusybeeTimeTableBundle:LearningGroups:learningGroupsCollection.html.twig' %}
+'BusybeeTimeTableBundle:LearningGroups:learningGroupsCollection.html.twig'
+'BusybeeTimeTableBundle:Lines:lineCollection.html.twig' %}
 
 {% block title %}{{ parent() }}{{ 'timetable.edit.title'|trans }}{% endblock title %}
 {% block headerTitle %}{{ 'timetable.edit.title'|trans }}{% endblock headerTitle %}
@@ -57,5 +57,4 @@
     {{ parent() }}
     {% include '@BusybeeForm/Scripts/jquery.collection.js.html.twig' %}
     {% include '@BusybeeTimeTable/Lines/lineScript.html.twig' %}
-    {% include '@BusybeeTimeTable/LearningGroups/learningGroupsScript.html.twig' %}
 {% endblock javascripts %}
