--- a/src/Busybee/TimeTableBundle/Resources/views/LearningGroups/learningGroupsCollection.html.twig
+++ b/src/Busybee/TimeTableBundle/Resources/views/LearningGroups/learningGroupsCollection.html.twig
@@ -21,9 +21,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12 well">
-                    {{ form_row(form.name) }}
-                    {{ form_row(form.nameShort) }}
-                    {{ form_row(form.course) }}
+                    {{ form_row(form) }}
                 </div>
             </div>
         </div>
