End of Work 22nd Apr 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/InstituteBundle/Resources/views/Calendar/specialDay.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Calendar/specialDay.html.twig
@@ -24,7 +24,7 @@
                 {{ form_row(form.name) }}
 			</div>
 			<div class="col-sm-5 well">
-                {{ form_row(form.year) }}
+                {{ form_row(form.year, {'value': app.request.get('id')}) }}
                 {{ form_row(form.description) }}
 			</div>
 		</div>
