--- a/src/Busybee/PersonBundle/Resources/views/Person/script.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/script.html.twig
@@ -168,13 +168,14 @@
             }
         });
 
-        {% if form.student.enrolments is defined %}
-        $(".enrolmentList").collection({
-            name_prefix: '{{ form.student.enrolments.vars.full_name }}',
+        {% if form.student.grades is defined %}
+
+        $(".gradeList").collection({
+            name_prefix: '{{ form.student.grades.vars.full_name }}',
             allow_up: false,
             allow_down: false,
-            add: '<button title="{{ 'student.enrolment.add'|trans({}, 'BusybeeStudentBundle') }}" type="button" class="halflings halflings-plus-sign btn btn-primary" style="float: right;"></button>',
-            remove: '<button title="{{ 'student.enrolment.remove'|trans({}, 'BusybeeStudentBundle') }}" type="button" class="halflings halflings-erase btn btn-warning" style="float: right;"></button>',
+            add: '<button title="{{ 'student.grade.add'|trans({}, 'BusybeeStudentBundle') }}" type="button" class="halflings halflings-plus-sign btn btn-primary" style="float: right;"></button>',
+            remove: '<button title="{{ 'student.grade.remove'|trans({}, 'BusybeeStudentBundle') }}" type="button" class="halflings halflings-erase btn btn-warning" style="float: right;"></button>',
             add_at_the_end: true
         });
         {% endif %}
