--- a/src/Busybee/PersonBundle/Resources/views/Person/extra.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/extra.html.twig
@@ -9,7 +9,7 @@
             <div class="row">
                 <div class="col-sm-4 well">
                     {{ form_row(form.extra.vehicleRegistration) }}
-                    {{ form_row(form.extra.person) }}
+                    {{ form_row(form.extra.person, {'value': app.request.get('id')}) }}
                 </div>
             </div>
         </div>
