--- a/src/Busybee/InstituteBundle/Resources/views/Calendar/specialDay.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Calendar/specialDay.html.twig
@@ -45,6 +45,6 @@
 				</div>
 			</div>
 		</div>
-    {% include '@BusybeeInstitute/Calendar/specialDay.js.twig' with {'name': form.vars.name} %}
+    {% include '@BusybeeInstitute/Calendar/specialDayScript.html.twig' with {'name': form.vars.name} %}
     {% include '@BusybeeHome/Page/panelEnd.html.twig' %}
 {% endblock specialday_widget %}
