--- a/src/Busybee/InstituteBundle/Resources/views/Calendar/term.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Calendar/term.html.twig
@@ -25,7 +25,7 @@
 			</div>
 			<div class="col-sm-4 well">
                 {{ form_row(form.lastDay) }}
-                {{ form_row(form.year) }}
+                {{ form_row(form.year, {'value': app.request.get('id')}) }}
 				</div>
 			</div>
 		</div>
